// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen - Unit Tests Renderització inicial snapshot test - estat inicial 1`] = `
<View>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          colors={
            [
              "#FF8904",
              "#F54900",
            ]
          }
          end={
            {
              "x": 1,
              "y": 0,
            }
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "alignItems": "center",
              "borderBottomLeftRadius": 30,
              "borderBottomRightRadius": 30,
              "paddingBottom": 30,
              "paddingHorizontal": 20,
              "paddingTop": 5,
            }
          }
        >
          <Image
            height={120}
            resizeMode="contain"
            source="AppLogo"
            style={
              {
                "height": 180,
                "marginBottom": -20,
                "marginTop": 0,
                "width": 180,
              }
            }
            width={120}
          />
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 18,
                "fontWeight": "bold",
                "letterSpacing": 2,
                "marginBottom": 30,
              }
            }
          >
             Refugis Lliures 
          </Text>
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 20,
                "fontWeight": "bold",
                "marginBottom": 4,
              }
            }
          >
            login.title
          </Text>
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 14,
                "opacity": 0.9,
              }
            }
          >
            login.subtitle
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
              "paddingHorizontal": 30,
              "paddingTop": 40,
            }
          }
        >
          <View
            style={
              {
                "marginBottom": 16,
              }
            }
          >
            <TextInput
              autoCapitalize="none"
              editable={true}
              keyboardType="email-address"
              onChangeText={[Function]}
              placeholder="login.emailPlaceholder"
              placeholderTextColor="#999"
              returnKeyType="done"
              style={
                {
                  "backgroundColor": "#fff",
                  "borderColor": "#e5e7eb",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "color": "#1f2937",
                  "fontSize": 16,
                  "paddingHorizontal": 20,
                  "paddingVertical": 16,
                }
              }
              testID="email-input"
              value=""
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 12,
                "marginBottom": 30,
                "opacity": 0.7,
                "overflow": "hidden",
              }
            }
            testID="continue-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#dadadaff",
                  "justifyContent": "center",
                  "paddingVertical": 16,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#fff",
                      "fontSize": 16,
                      "fontWeight": "bold",
                    },
                    {
                      "color": "#707070ff",
                    },
                  ]
                }
              >
                login.continue
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#6b7280",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 14,
                  "marginHorizontal": 16,
                }
              }
            >
              login.orContinueWith
            </Text>
            <View
              style={
                {
                  "backgroundColor": "#6b7280",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#fff",
                "borderColor": "#e5e7eb",
                "borderRadius": 12,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 20,
                "paddingVertical": 16,
              }
            }
            testID="google-login-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                resizeMode="contain"
                source="AppLogo"
                style={
                  {
                    "color": "#4285F4",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "height": 22,
                    "marginRight": 12,
                    "width": 22,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#1f2937",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                login.googleButton
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "marginBottom": 24,
                "marginTop": 24,
                "opacity": 1,
              }
            }
            testID="signup-link"
          >
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 14,
                }
              }
            >
              login.noAccount
            </Text>
            <Text
              style={
                {
                  "color": "#FF8904",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginLeft": 4,
                }
              }
            >
              login.signUpLink
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "center",
                "marginBottom": 24,
                "marginTop": 16,
                "paddingHorizontal": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 13,
                  "textAlign": "center",
                }
              }
            >
              login.termsText
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="terms-link"
            >
              <Text
                style={
                  {
                    "color": "#2563eb",
                    "fontSize": 13,
                    "fontWeight": "600",
                    "textDecorationLine": "underline",
                  }
                }
              >
                login.termsLink
              </Text>
            </View>
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 13,
                  "textAlign": "center",
                }
              }
            >
              .
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`LoginScreen - Unit Tests Snapshot tests snapshot test - pas de contrasenya 1`] = `
<View>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          colors={
            [
              "#FF8904",
              "#F54900",
            ]
          }
          end={
            {
              "x": 1,
              "y": 0,
            }
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "alignItems": "center",
              "borderBottomLeftRadius": 30,
              "borderBottomRightRadius": 30,
              "paddingBottom": 30,
              "paddingHorizontal": 20,
              "paddingTop": 5,
            }
          }
        >
          <Image
            height={120}
            resizeMode="contain"
            source="AppLogo"
            style={
              {
                "height": 180,
                "marginBottom": -20,
                "marginTop": 0,
                "width": 180,
              }
            }
            width={120}
          />
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 18,
                "fontWeight": "bold",
                "letterSpacing": 2,
                "marginBottom": 30,
              }
            }
          >
             Refugis Lliures 
          </Text>
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 20,
                "fontWeight": "bold",
                "marginBottom": 4,
              }
            }
          >
            login.title
          </Text>
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 14,
                "opacity": 0.9,
              }
            }
          >
            login.subtitle
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
              "paddingHorizontal": 30,
              "paddingTop": 40,
            }
          }
        >
          <View
            style={
              {
                "marginBottom": 16,
              }
            }
          >
            <TextInput
              autoCapitalize="none"
              editable={true}
              keyboardType="email-address"
              onChangeText={[Function]}
              placeholder="login.emailPlaceholder"
              placeholderTextColor="#999"
              returnKeyType="next"
              style={
                {
                  "backgroundColor": "#fff",
                  "borderColor": "#e5e7eb",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "color": "#1f2937",
                  "fontSize": 16,
                  "paddingHorizontal": 20,
                  "paddingVertical": 16,
                }
              }
              testID="email-input"
              value="test@example.com"
            />
          </View>
          <View
            style={
              {
                "marginBottom": 16,
              }
            }
          >
            <View
              style={
                {
                  "position": "relative",
                  "width": "100%",
                }
              }
            >
              <TextInput
                editable={true}
                onChangeText={[Function]}
                placeholder="login.passwordPlaceholder"
                placeholderTextColor="#999"
                secureTextEntry={true}
                style={
                  [
                    {
                      "backgroundColor": "#fff",
                      "borderColor": "#e5e7eb",
                      "borderRadius": 12,
                      "borderWidth": 1,
                      "color": "#1f2937",
                      "fontSize": 16,
                      "paddingHorizontal": 20,
                      "paddingVertical": 16,
                    },
                    {
                      "paddingRight": 48,
                    },
                  ]
                }
                testID="password-input"
                value=""
              />
              <View
                accessibilityLabel="Show password"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "bottom": 0,
                    "justifyContent": "center",
                    "opacity": 1,
                    "padding": 8,
                    "position": "absolute",
                    "right": 12,
                    "top": 0,
                  }
                }
                testID="toggle-password-visibility"
              >
                <AppLogo
                  height={22}
                  width={22}
                />
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "flex-end",
                "marginBottom": 24,
                "marginTop": 4,
                "opacity": 1,
              }
            }
            testID="forgot-password-button"
          >
            <Text
              style={
                {
                  "color": "#FF8904",
                  "fontSize": 14,
                  "fontWeight": "600",
                }
              }
            >
              login.forgotPassword
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 12,
                "marginBottom": 30,
                "opacity": 1,
                "overflow": "hidden",
              }
            }
            testID="login-button"
          >
            <View
              colors={
                [
                  "#FF8904",
                  "#F54900",
                ]
              }
              end={
                {
                  "x": 1,
                  "y": 0,
                }
              }
              start={
                {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "paddingVertical": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "bold",
                  }
                }
              >
                login.loginButton
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#6b7280",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 14,
                  "marginHorizontal": 16,
                }
              }
            >
              login.orContinueWith
            </Text>
            <View
              style={
                {
                  "backgroundColor": "#6b7280",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#fff",
                "borderColor": "#e5e7eb",
                "borderRadius": 12,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 20,
                "paddingVertical": 16,
              }
            }
            testID="google-login-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                resizeMode="contain"
                source="AppLogo"
                style={
                  {
                    "color": "#4285F4",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "height": 22,
                    "marginRight": 12,
                    "width": 22,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#1f2937",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                login.googleButton
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "marginBottom": 24,
                "marginTop": 24,
                "opacity": 1,
              }
            }
            testID="signup-link"
          >
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 14,
                }
              }
            >
              login.noAccount
            </Text>
            <Text
              style={
                {
                  "color": "#FF8904",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginLeft": 4,
                }
              }
            >
              login.signUpLink
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "center",
                "marginBottom": 24,
                "marginTop": 16,
                "paddingHorizontal": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 13,
                  "textAlign": "center",
                }
              }
            >
              login.termsText
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="terms-link"
            >
              <Text
                style={
                  {
                    "color": "#2563eb",
                    "fontSize": 13,
                    "fontWeight": "600",
                    "textDecorationLine": "underline",
                  }
                }
              >
                login.termsLink
              </Text>
            </View>
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 13,
                  "textAlign": "center",
                }
              }
            >
              .
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`LoginScreen - Unit Tests Snapshot tests snapshot test - sense callback de signup 1`] = `
<View>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          colors={
            [
              "#FF8904",
              "#F54900",
            ]
          }
          end={
            {
              "x": 1,
              "y": 0,
            }
          }
          start={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "alignItems": "center",
              "borderBottomLeftRadius": 30,
              "borderBottomRightRadius": 30,
              "paddingBottom": 30,
              "paddingHorizontal": 20,
              "paddingTop": 5,
            }
          }
        >
          <Image
            height={120}
            resizeMode="contain"
            source="AppLogo"
            style={
              {
                "height": 180,
                "marginBottom": -20,
                "marginTop": 0,
                "width": 180,
              }
            }
            width={120}
          />
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 18,
                "fontWeight": "bold",
                "letterSpacing": 2,
                "marginBottom": 30,
              }
            }
          >
             Refugis Lliures 
          </Text>
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 20,
                "fontWeight": "bold",
                "marginBottom": 4,
              }
            }
          >
            login.title
          </Text>
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 14,
                "opacity": 0.9,
              }
            }
          >
            login.subtitle
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
              "paddingHorizontal": 30,
              "paddingTop": 40,
            }
          }
        >
          <View
            style={
              {
                "marginBottom": 16,
              }
            }
          >
            <TextInput
              autoCapitalize="none"
              editable={true}
              keyboardType="email-address"
              onChangeText={[Function]}
              placeholder="login.emailPlaceholder"
              placeholderTextColor="#999"
              returnKeyType="done"
              style={
                {
                  "backgroundColor": "#fff",
                  "borderColor": "#e5e7eb",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "color": "#1f2937",
                  "fontSize": 16,
                  "paddingHorizontal": 20,
                  "paddingVertical": 16,
                }
              }
              testID="email-input"
              value=""
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 12,
                "marginBottom": 30,
                "opacity": 0.7,
                "overflow": "hidden",
              }
            }
            testID="continue-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#dadadaff",
                  "justifyContent": "center",
                  "paddingVertical": 16,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#fff",
                      "fontSize": 16,
                      "fontWeight": "bold",
                    },
                    {
                      "color": "#707070ff",
                    },
                  ]
                }
              >
                login.continue
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#6b7280",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 14,
                  "marginHorizontal": 16,
                }
              }
            >
              login.orContinueWith
            </Text>
            <View
              style={
                {
                  "backgroundColor": "#6b7280",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#fff",
                "borderColor": "#e5e7eb",
                "borderRadius": 12,
                "borderWidth": 1,
                "opacity": 1,
                "paddingHorizontal": 20,
                "paddingVertical": 16,
              }
            }
            testID="google-login-button"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                resizeMode="contain"
                source="AppLogo"
                style={
                  {
                    "color": "#4285F4",
                    "fontSize": 20,
                    "fontWeight": "bold",
                    "height": 22,
                    "marginRight": 12,
                    "width": 22,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#1f2937",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                login.googleButton
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "center",
                "marginBottom": 24,
                "marginTop": 16,
                "paddingHorizontal": 10,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 13,
                  "textAlign": "center",
                }
              }
            >
              login.termsText
            </Text>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="terms-link"
            >
              <Text
                style={
                  {
                    "color": "#2563eb",
                    "fontSize": 13,
                    "fontWeight": "600",
                    "textDecorationLine": "underline",
                  }
                }
              >
                login.termsLink
              </Text>
            </View>
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 13,
                  "textAlign": "center",
                }
              }
            >
              .
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
